# shared-mul

./: .gitignore  Makefile.am  README.md  configure.ac  giella-shared-mul.pc.in  shared-mul.pc.in
.github/workflows/: docsygen.yml
.gut/: delta.toml
docs/: _config.yml  index.md
src/: Makefile.am
src/fst/: Makefile.am  emojis.lexc  testroot.lexc  url.lexc
src/fst/stems/: Makefile.am  punctuation.lexc  symbols.lexc  telephone.lexc
